--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+     "tree-kill": ">=1.2.2",
+     "node-forge": ">=0.10.0",
+      "serialize-javascript": ">=3.1.0"
   },
   "engines": {
     "node": "11.15.0",
